# django_hw

./: .env.sample  README.md  categories_fixture.json  products_fixture.json  pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_alter_category_description_alter_product_created_at_and_more.py
catalog/templates/: contacts.html  home.html
config/: settings.py  urls.py
