[tool.poetry]
name = "django-hw"
version = "0.1.0"
description = ""
authors = ["Maria Maltseva <mariamaltseva1106@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"
psycopg2-binary = "^2.9.10"
pillow = "^11.0.0"
ipython = "^8.30.0"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
